# picogpt-rust

./: .gitignore  Cargo.toml  flake.nix  readme.md
python/: checkpoint_to_npy.py  download_model.py
src/: encoder.rs  ext.rs  hyper_params.rs  main.rs  params.rs  utils.rs
