[package]
name = "picogpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
extend = "1.2.0"
fancy-regex = "0.13.0"
serde = "1.0.196"
serde_json = "1.0.113"
