[package]
name = "picogpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
extend = "1.2.0"
fancy-regex = "0.13.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
